fixed home page layout issue, sign out button, changed logo, and footer

--- a/app/assets/stylesheets/stocks.css.scss
+++ b/app/assets/stylesheets/stocks.css.scss
@@ -193,7 +193,7 @@ body.stocks.show {
         border-radius: 0;
         display: block;
         text-align: left;
-        font-size: medium;
+        font-size: 14px;
         border: none;
         @include aside-links-padding;
       }
